feat: Added algolia domain verification tag

--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -1,4 +1,5 @@
     {{!-- Add additional meta tags here --}}
+    <meta name="algolia-site-verification" content="A7D66945CEB8BC94" />
     <meta name="antora-ui-version" content="@@antora-ui-version"> {{!-- replaced by the gulp build --}}
     <meta name="version" content="{{{page.version}}}">
     <meta name="component" content="{{{page.component.name}}}">
