--- a/src/partials/article.hbs
+++ b/src/partials/article.hbs
@@ -2,7 +2,7 @@
 {{> breadcrumbs}}
 {{> article-latest}}
 {{#with page.title}}
-<h1 id="page-title" class="page">{{{this}}}</h1>
+<h1 class="page">{{{this}}}</h1>
 {{/with}}
 {{#with page.attributes.author}}
 <p class="page-author">{{this}}</p>
